--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -3,11 +3,31 @@ body {
     text-align: center;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
+/* HEADINGS */
+
 .header--main {
     font-weight: normal;
     font-size: 50px;
     color: white;
 }
+.header--secondary {
+    color: white;
+    font-weight: 300;
+    font-size: 42px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+}
+.header--subheader {
+    font-size: 21px;
+    color: gray;
+    font-weight: normal;
+}
+
+
+
+
+
+/* LINKS */
+
 .link--cta {
     font-size: 16px;
     color: aquamarine;
