--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -32,3 +32,10 @@ body {
     font-size: 16px;
     color: aquamarine;
 }
+/* Footer */
+.footer {
+    font-size: 21px;
+    color: gray;
+    text-align: right;
+}
+
